--- a/Makefile.ds
+++ b/Makefile.ds
@@ -47,7 +47,7 @@ QD := 0.25
 HD := 0.5
 
 RASTERS := un_codes un_codes-full un_subregions un_subregions-full \
-	roads roads-final gluds00ag grumps4 npp ag_suitability
+	gluds00ag grumps4 npp ag_suitability
 RESOLUTIONS := 1km luh2 rcp
 VECTORS := ssp-regions.shp
 ALL := $(addsuffix .tif, $(foreach res, ${RESOLUTIONS}, $(addprefix ${res}/, ${RASTERS}))) $(addprefix vector/, ${VECTORS})
@@ -62,6 +62,11 @@ luh: $(addsuffix .tif, $(addprefix luh2/, ${RASTERS} un_codes-full un_subregions
 1km/un_codes.tif: ${WORLD_BORDERS}
 	$(call rasterize, UN, Int16, ${OneKm}, $<, $@)
 
+1km/un_codes-full.tif: ${WORLD_BORDERS}
+	@gdal_rasterize -q -at -a_nodata -9999 -init -9999 -a UN -ot Int16 \
+		-tr ${OneKm} ${OneKm} -te -180 -90 180 90 \
+		-co "COMPRESS=lzw" -co "PREDICTOR=2" $< $@
+
 luh2/un_codes.tif: ${WORLD_BORDERS}
 	$(call rasterize, UN, Int16, ${QD}, $<, $@)
 
@@ -73,9 +78,19 @@ luh2/un_codes-full.tif: ${WORLD_BORDERS}
 rcp/un_codes.tif: ${WORLD_BORDERS}
 	$(call rasterize, UN, Int16, ${HD}, $<, $@)
 
+rcp/un_codes-full.tif: ${WORLD_BORDERS}
+	@gdal_rasterize -q -at -a_nodata -9999 -init -9999 -a UN -ot Int16 \
+		-tr ${HD} ${HD} -te -180 -90 180 90 \
+		-co "COMPRESS=lzw" -co "PREDICTOR=2" $< $@
+
 ### un_subregions
 1km/un_subregions.tif: ${WORLD_BORDERS}
 	$(call rasterize, SUBREGION, Int16, ${OneKm}, $<, $@)
+
+1km/un_subregions-full.tif: ${WORLD_BORDERS}
+	@gdal_rasterize -q -at -a_nodata -9999 -init -9999 -a SUBREGION -ot Int16 \
+		-tr ${OneKm} ${OneKm} -te -180 -90 180 90 \
+		-co "COMPRESS=lzw" -co "PREDICTOR=2" $< $@
 
 luh2/un_subregions.tif: ${WORLD_BORDERS}
 	$(call rasterize, SUBREGION, Int16, ${QD}, $<, $@)
@@ -87,6 +102,11 @@ luh2/un_subregions-full.tif: ${WORLD_BORDERS}
 
 rcp/un_subregions.tif: ${WORLD_BORDERS}
 	$(call rasterize, SUBREGION, Int16, ${HD}, $<, $@)
+
+rcp/un_subregions-full.tif: ${WORLD_BORDERS}
+	@gdal_rasterize -q -at -a_nodata -9999 -init -9999 -a SUBREGION -ot Int16 \
+		-tr ${HD} ${HD} -te -180 -90 180 90 \
+		-co "COMPRESS=lzw" -co "PREDICTOR=2" $< $@
 
 ### Net Primary Productivity (NPP)
 1km/npp.tif: ${NPP}
