Add joblib, pandas, and r-lme
This file list the requirements for setting up a native conda
environment for running projections.

--- a/environment.yml
+++ b/environment.yml
@@ -4,11 +4,14 @@ dependencies:
   - fiona
   - gdal
   - geopy
+  - joblib
   - matplotlib
   - netCDF4
   - numba
+  - pandas
   - pyparsing
   - rasterio
+  - r-lme4
   - rpy2
   - shapely
   - xlrd
