--- a/Makefile.ds
+++ b/Makefile.ds
@@ -12,8 +12,9 @@ endif
 define rasterize
 # $call rasterize attribute type resolution src dst)
 	@echo gdal_rasterize ${4} ${5}
-	gdal_rasterize -q -at -a_nodata -9999 -init -9999 -a ${1} -ot ${2} \
-		-tr ${3} ${3} -co "COMPRESS=lzw" -co "PREDICTOR=2" ${4} ${5}
+	gdal_rasterize -q -tap -at -a_nodata -9999 -init -9999 -a ${1} \
+		-ot ${2} -tr ${3} ${3} -co "COMPRESS=lzw" \
+		-co "PREDICTOR=2" ${4} ${5}
 	@echo done
 endef
 
@@ -30,7 +31,7 @@ endef
 
 define resize
 # $(call resize resolution src dst)
-	gdalwarp -overwrite -tr ${1} ${1} -dstnodata -9999 -of GTiff \
+resize	gdalwarp -tap -overwrite -tr ${1} ${1} -dstnodata -9999 -of GTiff \
 		-co COMPRESS=lzw -co PREDICTOR=2 ${2} ${3}
 endef
 
