Move install of basic python libraries to py-geospatial
Makes building the predicts image faster and these libraries don't
change often.

--- a/py-geospatial/Dockerfile
+++ b/py-geospatial/Dockerfile
@@ -1,7 +1,6 @@
 FROM geospatial:latest
 
 MAINTAINER Ricardo E. Gonzalez <ricardog@ricardog.com>
-
 RUN apt-get -y install python-pip \
 	make \
 	build-essential \
@@ -20,18 +19,24 @@ RUN apt-get -y install python-pip \
 	libffi-dev && \
 	pip install -U pip
 
-RUN wget -qO- https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | \
-	/bin/bash && \
-	echo 'export PATH="/root/.pyenv/bin:$PATH"' >> ~/.bashrc && \
+ADD --chown=rstudio:rstudio \
+	https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer \
+	/tmp/
+RUN usermod --shell /bin/bash rstudio
+USER rstudio
+RUN cat /tmp/pyenv-installer | /bin/bash && \
+	echo 'export PATH="${HOME}/.pyenv/bin:$PATH"' >> ~/.bashrc && \
 	echo 'eval "$(pyenv init -)"' >> ~/.bashrc && \
 	echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc && \
-	export PATH="/root/.pyenv/bin:$PATH" && \
+	export PATH="${HOME}/.pyenv/bin:$PATH" && \
 	eval "$(pyenv init -)" && \
 	eval "$(pyenv virtualenv-init -)" && \
 	pyenv install 3.6.3 && \
-	pyenv global 3.6.3 && \
-	pip install -U pip
-CMD /bin/bash
+	pyenv global 3.6.3
 
+RUN . /home/rstudio/.bashrc && \
+	pip install -U pip && \
+	pip install numpy cython && \
+	pip install gdal==2.1.3 --global-option "build_ext" --global-option="--include-dirs=/usr/include/gdal"
 
-
+USER root
