Add linspatialindex-dev to the list of required packages
This gets used by PySAL for generating fizzy neighborhood lists (queen
and rook neighborhood lists seem broken in pysal).

--- a/geospatial/Dockerfile
+++ b/geospatial/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update \
     libproj-dev \
     libprotobuf-dev \
     libnetcdf-dev \
+    libspatialindex-dev \
     libsqlite3-dev \
     libssl-dev \
     libudunits2-dev \
