Source .bashrc from .bash_profile
The way rstudio starts a terminal, bash doesn't source .bashrc which
means pyenv doesn't get setup.  But the shell does source
.bash_profile.

--- a/py-geospatial/Dockerfile
+++ b/py-geospatial/Dockerfile
@@ -1,6 +1,6 @@
 FROM geospatial:latest
-
 MAINTAINER Ricardo E. Gonzalez <ricardog@ricardog.com>
+
 RUN apt-get -y install python-pip \
 	make \
 	build-essential \
@@ -29,6 +29,7 @@ RUN export CONFIGURE_OPTS=--enable-shared && \
 	echo 'export PATH="${HOME}/.pyenv/bin:$PATH"' >> ~/.bashrc && \
 	echo 'eval "$(pyenv init -)"' >> ~/.bashrc && \
 	echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc && \
+	echo 'source "${HOME}/.bashrc"' >> ~/.bash_profile && \
 	export PATH="${HOME}/.pyenv/bin:$PATH" && \
 	eval "$(pyenv init -)" && \
 	eval "$(pyenv virtualenv-init -)" && \
