Cleanup setup and configuration files
Got rid of wonky reqs.txt file as well.  Now setup.py specifies the
modules that are required by raster-project and requirements.txt has
*additional* packages that I find useful to have installed when
projecting and visualizing data.

--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - matplotlib
   - netCDF4
   - pandas
-  - pyparsing
+  - r2py @ git+https://github.com/ricardog/r2py
   - rasterio
   - shapely
   - xlrd
