Fixes for pyenv in py-geospatial Dockerfile
pyenv split the init command in two.  This changes updates the setup
commands in Dockerfile to deal with this.

--- a/py-geospatial/Dockerfile
+++ b/py-geospatial/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get -y install python3-pip \
 	tk-dev \
 	libxml2-dev \
 	libxmlsec1-dev \
-	libffi-dev
+	libffi-dev \
 	gdal-bin && \
 	pip3 install -U pip
 
@@ -27,17 +27,19 @@ RUN usermod --shell /bin/bash rstudio
 USER rstudio
 RUN export CONFIGURE_OPTS=--enable-shared && \
 	cat /tmp/pyenv-installer | /bin/bash && \
-	echo 'export PATH="${HOME}/.pyenv/bin:$PATH"' >> ~/.bashrc && \
+	echo 'export PYENV_ROOT="${HOME}/.pyenv"' >> ~/.bash_profile && \
+	echo 'export PATH="${HOME}/.pyenv/bin:$PATH"' >> ~/.bash_profile && \
+	echo 'eval "$(pyenv init --path)"' >> ~/.bash_profile && \
+	echo '. "${HOME}/.bashrc"' >> ~/.bash_profile && \
+	export PATH="${HOME}/.pyenv/bin:$PATH" && \
 	echo 'eval "$(pyenv init -)"' >> ~/.bashrc && \
 	echo 'eval "$(pyenv virtualenv-init -)"' >> ~/.bashrc && \
-	echo 'source "${HOME}/.bashrc"' >> ~/.bash_profile && \
-	export PATH="${HOME}/.pyenv/bin:$PATH" && \
 	eval "$(pyenv init -)" && \
 	eval "$(pyenv virtualenv-init -)" && \
 	pyenv install 3.8.6 && \
 	pyenv global 3.8.6
 
-RUN . /home/rstudio/.bashrc && \
+RUN . /home/rstudio/.bash_profile && \
 	pip install -U pip && \
 	pip install numpy cython && \
 	pip install gdal==3.0.4 --global-option "build_ext" --global-option="--include-dirs=/usr/include/gdal"
